--- a/prevbuilds/index02.html
+++ b/prevbuilds/index02.html
@@ -52,89 +52,44 @@
     var wins = 0;
     var losses = 0;
     var tries = 5;
-    var lettersGuessed = ["_","_","_","_","_"];
-    var newGame = 1;
-    var compGuessHolder = "a";
 
    
 
     document.onkeyup = function(event) {
 
-        if (newGame === 1) {
-            var computerGuess = computerChoices[Math.floor(Math.random() * computerChoices.length)];
-            tries =5;
-            compGuessHolder = computerGuess;
-            lettersGuessed = ["_","_","_","_","_"];
+      var computerGuess = computerChoices[Math.floor(Math.random() * computerChoices.length)];
+
+      var userGuess = event.key;
+            console.log("computer: " + computerGuess);
+            console.log("user: " + userGuess);
+            console.log("-------")
+
+            if (computerChoices.indexOf(userGuess) !== -1) {
+                if (userGuess === computerGuess) {
+                    wins++;
+                    var computerGuess = computerChoices[Math.floor(Math.random() * computerChoices.length)];
+                    tries = 5;
+                    if (wins > 3) {
+                        i = 9001;
+                        console.log("wins: "+wins)
+                        alert("you are the winrar!")
+                    }
+                } else {
+                    tries--;
+                    if (tries = 0) {
+                        losses++;
+                        tries = 5
+                        var computerGuess = computerChoices[Math.floor(Math.random() * computerChoices.length)];
+                    }
+                }
         }
-
-        var userGuess = event.key; 
-        
-
-
-        if (computerChoices.indexOf(userGuess) !== -1) {      
-            lettersGuessed[(lettersGuessed.length-tries)] = userGuess
-            console.log("guesses----------")
-            for (var i = 0; i < lettersGuessed.length; i++) {
-               console.log(lettersGuessed[i]);
-               console.log(".")
-            }
-            console.log("----------")
-            tries--;
-
-        } 
-
-
-        console.log("user " +userGuess);
-        console.log("comp "+computerGuess);
-        console.log("compholder "+compGuessHolder);
-
-
-        if (tries !== 5) {
-            newGame = 0;
-        }
-        if (tries === 0) {
-            newGame = 1;
-        }      
-        
         var html = "<p>Press any letter to start playing!</p>" +
-        "<p>wins: " + wins + "</p>" +
-        "<p>losses: " + losses + "</p>" +
-        "<p>tries left: " + tries + "</p>";
+            "<p>wins: " + wins + "</p>" +
+            "<p>losses: " + losses + "</p>" +
+            "<p>tries left: " + tries + "</p>";
 
         document.querySelector("#game").innerHTML = html;
-
-
-
-
-    } //end of document.onekeyup
-
-    // var computerGuess = computerChoices[Math.floor(Math.random() * computerChoices.length)];
-
-    //   var userGuess = event.key;
-    //         console.log("computer: " + computerGuess);
-    //         console.log("user: " + userGuess);
-    //         console.log("-------")
-
-    //         if (computerChoices.indexOf(userGuess) !== -1) {
-    //             if (userGuess === computerGuess) {
-    //                 wins++;
-    //                 var computerGuess = computerChoices[Math.floor(Math.random() * computerChoices.length)];
-    //                 tries = 5;
-    //                 if (wins > 3) {
-    //                     i = 9001;
-    //                     console.log("wins: "+wins)
-    //                     alert("you are the winrar!")
-    //                 }
-    //             } else {
-    //                 tries--;
-    //                 if (tries = 0) {
-    //                     losses++;
-    //                     tries = 5
-    //                     var computerGuess = computerChoices[Math.floor(Math.random() * computerChoices.length)];
-    //                 }
-    //             }
-    //     }
-
+    }
     </script>
     <!-- footer -->
     <footer class="footer-bottom col-xs-12 navbar-inverse navbar-fixed-bottom">
