--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
             
 
             if (userGuess === compGuessHolder) {
-              wins++;
+              wins++; 
+              alert("You win! Computer guessed "+compGuessHolder);
               console.log("***WIN***");
               reset();
             } else {
