--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
                 </button> -->
                 <a class="navbar-brand" href="#">Psychic Game</a>
             </div>
+            <div id="navbar" class="navbar-collapse collapse navbar-right" aria-expanded="false" style="height: 0.8px;">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Psychic Game</a></li>
+                    <li><a href="https://lasperilla.github.io/Hangman-Game/">Hangman β</a></li>
+                </ul>
+            </div>            
         </div>
     </nav>
     <div class="container">
